syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";

package example.shoppingcart;

option java_package = "com.example";

service HotItemsService {
  rpc ItemAddedToCart(Item) returns (google.protobuf.Empty);
}

message Item {
  string product_id = 1;
  string name = 2;
  int32 quantity = 3;
}

